# robot-simulator

./: README.md  multi_agent.txt  pyproject.toml  setup.cfg  single_agent.txt
configs/: default_agents_cfg.yaml
src/agent/: agent.py  agent_factory.py  controller.py  planner.py
src/agents/: agent.py  agent_factory.py
src/scripts/: visualize_occupancy_image.py  visualize_rrt_plan.py
src/simulator/: simulator.py
src/utils/: config.py  types.py
src/visualizer/: visualizer.py
src/world/: world.py
