[metadata]
name = robot-simulator
version = 0.0.1
author = "Dominic Wong"
author_email = dominicwong999@gmail.com
description = ""

[options]
packages = find_namespace:
install_requires =
  numpy>=1.26.1
  jaxtyping >= 0.2.24
  matplotlib>=3.8.2
python_requires = >=3.10

[options.packages.find]
include = src.*

[options.extras_require]
testing =
  pytest >= 7.2.2
  pytest-benchmark >= 4.0.0
  pytest-cov >= 2.10.1
  pytest-mock >= 3.6.1
